Works with shifts.

--- a/bin/help/asmAbout.html
+++ b/bin/help/asmAbout.html
@@ -67,19 +67,29 @@ div.Section1
 <div class=Section1>
 
 <p class=MsoBodyText align=center style='text-align:center'><b><span
-style='font-size:12.0pt'>Assembler, Version 2.5</span></b></p>
+style='font-size:12.0pt'>Assembler, Version 2.6</span></b></p>
 
 <p class=MsoBodyText align=center style='text-align:center'><span
 style='font-size:12.0pt'>&nbsp;</span></p>
 
-<p class=MsoBodyText align=center style='text-align:center'>This program is
-part of www.nand2tetris.org<o:p></o:p></p>
+<p class=MsoBodyText align=center style='text-align:center'><span
+style='font-size:12.0pt'>This program is part of the software suite that
+accompanies the book:</span></p>
 
-<p class=MsoBodyText align=center style='text-align:center'><span class=GramE>and</span>
-the book &quot;The Elements of Computing Systems&quot;<o:p></o:p></p>
+<p class=MsoBodyText align=center style='text-align:center'><span
+style='font-size:12.0pt'>&nbsp;</span></p>
 
-<p class=MsoBodyText align=center style='text-align:center'><span class=GramE>by</span>
-Nisan and Schocken, MIT Press.</p>
+<p class=MsoBodyText align=center style='text-align:center'><b><span
+style='font-size:12.0pt'>The Elements of Computing Systems<o:p></o:p></span></b></p>
+
+<p class=MsoBodyText align=center style='text-align:center'><span
+style='font-size:12.0pt'>by Noam Nisan and Shimon Schocken</span></p>
+
+<p class=MsoBodyText align=center style='text-align:center'><span
+style='font-size:12.0pt'>MIT Press, 2005</span></p>
+
+<p class=MsoBodyText align=center style='text-align:center'><span
+style='font-size:12.0pt'>Book site: www.idc.ac.il/tecs</span></p>
 
 <p class=MsoBodyText align=center style='text-align:center'><span
 style='font-size:12.0pt'>&nbsp;</span></p>
@@ -87,7 +97,8 @@ style='font-size:12.0pt'>&nbsp;</span></p>
 <p class=MsoBodyText align=center style='text-align:center'><span
 style='font-size:12.0pt'>Software Architects: Yaron Ukrainitz and Yannai A. Gonczarowski</span></p>
 
-<p class=MsoNormal>&nbsp;</p>
+<p class=MsoBodyText align=center style='text-align:center'><span
+style='font-size:12.0pt'>Updates by: Aviv Yaish</span></p>
 
 </div>
 
