--- a/bin/help/vmUsage.html
+++ b/bin/help/vmUsage.html
@@ -5,46 +5,39 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <meta name=ProgId content=Word.Document>
-<meta name=Generator content="Microsoft Word 11">
-<meta name=Originator content="Microsoft Word 11">
+<meta name=Generator content="Microsoft Word 10">
+<meta name=Originator content="Microsoft Word 10">
 <link rel=File-List href="vmUsage_files/filelist.xml">
 <title>Usage instruction and tips can be found in:</title>
 <!--[if gte mso 9]><xml>
  <w:WordDocument>
   <w:GrammarState>Clean</w:GrammarState>
-  <w:ValidateAgainstSchemas/>
-  <w:SaveIfXMLInvalid>false</w:SaveIfXMLInvalid>
-  <w:IgnoreMixedContent>false</w:IgnoreMixedContent>
-  <w:AlwaysShowPlaceholderText>false</w:AlwaysShowPlaceholderText>
   <w:BrowserLevel>MicrosoftInternetExplorer4</w:BrowserLevel>
  </w:WordDocument>
-</xml><![endif]--><!--[if gte mso 9]><xml>
- <w:LatentStyles DefLockedState="false" LatentStyleCount="156">
- </w:LatentStyles>
 </xml><![endif]-->
 <style>
 <!--
  /* Style Definitions */
  p.MsoNormal, li.MsoNormal, div.MsoNormal
 	{mso-style-parent:"";
-	margin:0cm;
+	margin:0in;
 	margin-bottom:.0001pt;
 	mso-pagination:widow-orphan;
 	font-size:12.0pt;
 	font-family:"Times New Roman";
 	mso-fareast-font-family:"Times New Roman";}
 p.MsoBodyText, li.MsoBodyText, div.MsoBodyText
-	{margin:0cm;
+	{margin:0in;
 	margin-bottom:.0001pt;
 	mso-pagination:widow-orphan;
 	font-size:13.0pt;
 	font-family:"Times New Roman";
 	mso-fareast-font-family:"Times New Roman";}
 @page Section1
-	{size:612.0pt 792.0pt;
-	margin:72.0pt 90.0pt 72.0pt 90.0pt;
-	mso-header-margin:36.0pt;
-	mso-footer-margin:36.0pt;
+	{size:8.5in 11.0in;
+	margin:1.0in 1.25in 1.0in 1.25in;
+	mso-header-margin:.5in;
+	mso-footer-margin:.5in;
 	mso-paper-source:0;}
 div.Section1
 	{page:Section1;}
@@ -59,20 +52,17 @@ div.Section1
 	mso-tstyle-colband-size:0;
 	mso-style-noshow:yes;
 	mso-style-parent:"";
-	mso-padding-alt:0cm 5.4pt 0cm 5.4pt;
-	mso-para-margin:0cm;
+	mso-padding-alt:0in 5.4pt 0in 5.4pt;
+	mso-para-margin:0in;
 	mso-para-margin-bottom:.0001pt;
 	mso-pagination:widow-orphan;
 	font-size:10.0pt;
-	font-family:"Times New Roman";
-	mso-ansi-language:#0400;
-	mso-fareast-language:#0400;
-	mso-bidi-language:#0400;}
+	font-family:"Times New Roman";}
 </style>
 <![endif]-->
 </head>
 
-<body lang=EN-US style='tab-interval:36.0pt'>
+<body lang=EN-US style='tab-interval:.5in'>
 
 <div class=Section1>
 
@@ -89,7 +79,7 @@ style='font-size:12.0pt'>The VM Emulator Tutorial</span></b></p>
 style='font-size:12.0pt'>&nbsp;</span></b></p>
 
 <p class=MsoBodyText align=center style='text-align:center'><span
-style='font-size:12.0pt'>Available in www.nand2tetris.org</span></p>
+style='font-size:12.0pt'>Available from www.idc.ac.il/tecs</span></p>
 
 <p class=MsoBodyText align=center style='text-align:center'><span
 style='font-size:12.0pt'>&nbsp;</span></p>
@@ -104,7 +94,7 @@ style='font-size:12.0pt'>The Elements of Computing Systems,<o:p></o:p></span></b
 style='font-size:12.0pt'>by Noam Nisan and Shimon Schocken<b><o:p></o:p></b></span></p>
 
 <p class=MsoBodyText align=center style='text-align:center'><span
-style='font-size:12.0pt'>MIT Press</span></p>
+style='font-size:12.0pt'>MIT Press, 2005</span></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
